--- a/Dithery-cli.csproj
+++ b/Dithery-cli.csproj
@@ -11,6 +11,7 @@
 
     <Authors>Kaarlo Räihä</Authors>
     <Description>Dithery-cli is command-line image dithering tool</Description>
+    <PackageProjectUrl>https://github.com/mcraiha/Dithery-cli</PackageProjectUrl>
 
     <VersionPrefix>1.0.0</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
