--- a/.github/workflows/build-win-release.yml
+++ b/.github/workflows/build-win-release.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build a release
-      run: dotnet publish -c Release -r win-x64 -p:PublishSingleFile=true --self-contained true -o publish
+      run: dotnet publish -c Release -f net5.0 -r win-x64 -p:PublishSingleFile=true --self-contained true -o publish
     - name: Rename and move binary
       run: mv publish/Dithery-cli.exe dithery.exe
     - name: Install zip
