--- a/.github/workflows/build-win-release.yml
+++ b/.github/workflows/build-win-release.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
+    - name: Get current tag
+      run: echo "CURRENT_TAG=`git describe --tags --abbrev=0`" >> $GITHUB_ENV
     - name: Restore dependencies
       run: dotnet restore
     - name: Build a release
@@ -25,11 +27,11 @@ jobs:
     - name: Install zip
       run: sudo apt install zip
     - name: Package
-      run: zip -9 release_${{ github.ref_name }}-win_x64.zip dithery.exe
+      run: zip -9 release_${{ env.CURRENT_TAG }}-win_x64.zip dithery.exe
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         prerelease: false
         files: |
-          release_${{ github.ref_name }}-win_x64.zip
+          release_${{ env.CURRENT_TAG }}-win_x64.zip
             
