--- a/Dithery-cli.csproj
+++ b/Dithery-cli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net7.0</TargetFrameworks>
     <RootNamespace>Dithery_cli</RootNamespace>
 
     <PackAsTool>true</PackAsTool>
@@ -14,7 +14,7 @@
     <PackageProjectUrl>https://github.com/mcraiha/Dithery-cli</PackageProjectUrl>
     <PackageLicenseExpression>Unlicense</PackageLicenseExpression>
 
-    <VersionPrefix>1.0.5</VersionPrefix>
+    <VersionPrefix>1.0.6</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
   </PropertyGroup>
 
