--- a/Dithery-cli.csproj
+++ b/Dithery-cli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
     <RootNamespace>Dithery_cli</RootNamespace>
 
     <PackAsTool>true</PackAsTool>
@@ -14,13 +14,13 @@
     <PackageProjectUrl>https://github.com/mcraiha/Dithery-cli</PackageProjectUrl>
     <PackageLicenseExpression>Unlicense</PackageLicenseExpression>
 
-    <VersionPrefix>1.0.6</VersionPrefix>
+    <VersionPrefix>1.0.7</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
-    <PackageReference Include="LibDithering" Version="1.0.0" />
+    <PackageReference Include="LibDithering" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
