Publish Windows release as trimmed
And include libSkiaSharp.dll in .zip

--- a/.github/workflows/build-do-releases.yml
+++ b/.github/workflows/build-do-releases.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build a Win-x64 release
-      run: dotnet publish -c Release -f net8.0 -r win-x64 -p:PublishSingleFile=true --self-contained true -o publish
+      run: dotnet publish -c Release -f net8.0 -r win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true -o publish
     - name: Rename and move Win-x64 binary
       run: mv publish/Dithery-cli.exe dithery.exe
     - name: Build a Linux-x64 release
@@ -31,7 +31,7 @@ jobs:
     - name: Install zip
       run: sudo apt install zip
     - name: Package Win-x64 release
-      run: zip -9 release_${{ env.CURRENT_TAG }}-win_x64.zip dithery.exe
+      run: zip -9 release_${{ env.CURRENT_TAG }}-win_x64.zip dithery.exe libSkiaSharp.dll
     - name: Package Linux-x64 release
       run: zip -9 release_${{ env.CURRENT_TAG }}-linux_x64.zip dithery
     - uses: "marvinpinto/action-automatic-releases@latest"
