--- a/Dithery-cli.csproj
+++ b/Dithery-cli.csproj
@@ -21,6 +21,8 @@
 
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.6" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.6" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.6" />
     <PackageReference Include="LibDithering" Version="1.0.1" />
   </ItemGroup>
 
